[tool.poetry]
name = "fastapi-overrider"
version = "0.1.0"
description = "Dependency overrides made easy."
authors = ["Philipp Hack <philipp.hack@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_overrider"}]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.95.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
